--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ java {
 		languageVersion = JavaLanguageVersion.of(17)
 	}
 }
+tasks.withType(JavaCompile) {
+	options.encoding = 'UTF-8'
+}
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
 
 repositories {
 	mavenCentral()
